# nexus

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
.github/workflows/: container-image-api.yml  tests.yml
ai-archive/: 2026-02-14-bpf-ingest-fix-and-memory-investigation.md  2026-02-19-api-lexical-indexing-p0-p2-fixes.md  2026-02-19-disable-patch-item-meili-search.md  2026-02-20-admin-rebuild-unbounded-range-defaults.md  2026-02-20-pipeline-queue-drain-watermark-fixes.md  2026-02-20-rebuild-stage-codepath-alignment.md  2026-02-20-threading-rebuild-observability-investigation.md  2026-02-23-api-server-full-reorganization-and-cleanup.md  2026-02-23-remove-legacy-config-branches-copy-threadfirst-embeddings-mandatory.md  2026-03-03-async-safety-payload-hardening-and-cache-concurrency.md  2026-03-03-handler-safety-and-http-client-reuse.md  2026-03-03-payload-and-embedding-index-guardrails.md  2026-03-03-runtime-numeric-conversion-hardening.md  2026-03-03-schema-hardening-thread-scope-and-job-attempt-consistency.md  2026-03-04-ci-workflow-hardening.md
crates/nexus-api/: Cargo.toml
crates/nexus-api/src/: api_docs.rs  auth.rs  error.rs  http.rs  logging.rs  main.rs  middleware.rs  models.rs  openapi.rs  params.rs  response.rs  router.rs  state.rs
crates/nexus-api/src/handlers/: admin.rs  authors.rs  docs.rs  emails.rs  health.rs  helpers.rs  jobs.rs  mailing_lists.rs  mod.rs  public.rs  stats.rs  threads.rs  webhooks.rs
crates/nexus-api/src/handlers/admin/: diagnostics.rs  embeddings.rs  helpers_and_tests.rs  ingest.rs  jobs.rs  mainline.rs  meili_bootstrap.rs  mod.rs  openapi.rs  pipeline.rs  rebuild.rs
crates/nexus-api/src/handlers/public/: helpers_and_tests.rs  lists.rs  messages.rs  mod.rs  openapi.rs  patch_items.rs  search.rs  series.rs  threads.rs  types.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: cli.rs  config.rs  main.rs  manifest.rs
crates/nexus-cli/src/commands/: import_mailing_lists.rs  mod.rs  reset_db.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: config.rs  embeddings.rs  lib.rs  search.rs
crates/nexus-db/: Cargo.toml  build.rs
crates/nexus-db/migrations/: 00002_init_mailing_lists.sql  00003_refine_mailing_schema.sql  00004_add_mailing_list_epoch_state.sql  00005_add_mail_staging_tables.sql  00006_threading_hash_drop_threaded_at.sql  0001_phase0_baseline.sql  0002_threading.sql  0003_patch_lineage.sql  0004_patch_item_files.sql  0005_pipeline_stages.sql  0006_embeddings.sql  0007_text_safety.sql  0008_simplified_pipeline.sql  0009_pipeline_run_safety.sql  0010_lineage_perf_indexes.sql  0011_meili_bootstrap_runs.sql  0012_pipeline_stage_lexical_embedding.sql  0013_partition_index_hygiene.sql  0014_lmi_seen_at_message_pk_idx.sql  0015_message_id_primary_repair_and_guard.sql  0016_pipeline_open_run_uniqueness.sql  0017_patch_series_latest_version_fk.sql  0018_schema_checks_hardening.sql  0019_threads_created_at_index.sql  0020_index_cleanup.sql  0021_message_raw_refs.sql  0022_backfill_message_raw_refs.sql  0023_drop_message_bodies_raw_rfc822.sql  0024_drop_message_raw_refs.sql  0025_message_patch_facts.sql  0026_schema_hardening_thread_scope_and_jobs.sql  0027_job_attempt_requeue_consistency.sql  0028_mainline_merge_detection.sql  0029_mainline_scan_state_ref_name_and_metadata.sql  0030_patch_series_version_threads.sql  20250101_create_jobs.sql
crates/nexus-db/src/: catalog.rs  db.rs  embeddings.rs  epochs.rs  ingest.rs  jobs.rs  lib.rs  lineage.rs  mail_ingest.rs  mailing_lists.rs  mainline.rs  models.rs  pipeline.rs  search.rs  threading.rs
crates/nexus-db/src/ingest/: batch_copy.rs  batch_sql.rs  helpers.rs  message.rs  mod.rs  tests.rs
crates/nexus-db/src/lineage/: logical.rs  mod.rs  read_messages.rs  read_series.rs  source.rs  upsert_files.rs  upsert_series_items.rs
crates/nexus-jobs/: Cargo.toml
crates/nexus-jobs/src/: b4_compat.rs  diff_metadata.rs  engine.rs  lib.rs  lineage.rs  mail.rs  meili.rs  patch_detect.rs  patch_id.rs  patch_subject.rs  payloads.rs  pipeline.rs  scanner.rs  threading.rs
crates/nexus-jobs/src/engine/: helpers.rs  mod.rs  tests.rs
crates/nexus-jobs/src/lineage/: core.rs  mod.rs  similarity.rs  tests.rs
crates/nexus-jobs/src/mail/: helpers.rs  mod.rs  parse.rs  patch.rs  sync.rs  tests.rs  threading.rs
crates/nexus-jobs/src/pipeline/: embedding_backfill.rs  embedding_generate.rs  helpers.rs  ingest.rs  lexical.rs  lineage.rs  mainline.rs  meili_bootstrap.rs  mod.rs  pipeline_flow.rs  rebuild.rs  threading.rs
crates/nexus-jobs/src/threading/: algorithm.rs  cache.rs  container.rs  cycle_detection.rs  mod.rs  tree_traversal.rs
