[workspace]
members = [
  "crates/nexus-api",
  "crates/nexus-cli",
  "crates/nexus-core",
  "crates/nexus-db",
  "crates/nexus-jobs",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nexus Team"]

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.14"
thiserror = "1"
once_cell = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
gix = "0.63"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
flate2 = "1.0"
sha2 = "0.10"

sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "json",
  "migrate",
] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
