[package]
name = "nexus-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nexus-core = { path = "../nexus-core" }
nexus-db = { path = "../nexus-db" }
nexus-jobs = { path = "../nexus-jobs" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
