[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

nexus-core = { path = "../nexus-core" }
nexus-db = { path = "../nexus-db" }
