[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

nexus-core = { path = "../nexus-core" }
nexus-db = { path = "../nexus-db" }
